--- a/backend/view/index.html
+++ b/backend/view/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" type="text/css" href="/css/estiloHome.css"/>
     <link rel="stylesheet" type="text/css" href="/css/estiloArtigosPI.css"/>
     <link rel="stylesheet" type="text/css" href="/css/estiloComunidade.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/estiloSobreNos.css"/>
     <link rel="stylesheet" type="text/css" href="/fontawesome-free-5.9.0-web/css/all.min.css">
 </head>
 <body>
@@ -36,10 +35,11 @@
                                 <a class="nav-link" href="#sobre">SOBRE</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://ruralnbr.herokuapp.com/tempo">TEMPO</a>
+                                <a class="nav-link" href="https://ruralnbr.herokuapp.com/#sobre">TEMPO</a>
                             </li>
                         </ul>
                     </div>
+                    
                 </nav>
         </header>
         <section id="home" class="row no-gutters w-auto">
@@ -135,7 +135,7 @@
             </div>
         </section>
         <section class="row no-gutters">
-            <h1 class="col-sm-12 no-gutters m-0 p-3 w-100 text-white bg-success">Sobre nós...</h1>
+            <h1 class="col-sm-12 no-gutters m-0 p-5  w-100 text-white bg-success">Sobre nós...</h1>
 
             <div class="col-sm-6 no-gutters p-5">
                 <p class="w-75 p-1 text-wrap">O RNBR é um projeto de extesão do IFRN - campus Ipanguaçu que tem como principal objetivo a produção e divulgação de informações associadas ao setor agropecuário, divulgando informações que envolvam o mercado, políticas agrícolas, pesquisas, inovações e eventos.</p>
@@ -143,7 +143,7 @@
             </div>
             <div class="col-sm-6 no-gutters p-0">
                 <div class="row no-gutters d-flex justify-content-left">
-                    <p class="col-sm-12 no-gutters m-0 pb-5 w-100 text-secondary text-left h3">Somos um grupo querendo facilitar o acesso a informação!</p>
+                    <p class="col-sm-12 no-gutters m-0 pb-5 pl-1 w-100 text-secondary text-left h3">Somos um grupo ansiando  facilitar o acesso a informação!</p>
                     <figure class="col-sm-2 no-gutters figure m-1">
                         <img class="img-fluid figure-img rounded" src="/imagens/geraldo.jpg">
                         <figcaption class="figure-caption float-sm-left">José Geraldo, coordenador do projeto</figcaption>
@@ -212,4 +212,5 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="/js/bootstrap.js"></script>
+<script src="/backend/public/js/tempo.js"></script>
 </html>
