--- a/backend/view/tempo-natal.html
+++ b/backend/view/tempo-natal.html
@@ -1,6 +1,5 @@
-<div class="hg-weather" id="teste" data-key="98906950" data-woeid="455888">
-    <span data-weather="message">Obtendo...<br></span>
-  
+
+<div>
     <span data-weather="city">Obtendo cidade</span> <span data-weather="temp">00</span>º C<br>
     <span data-weather="description">Obtendo tempo...</span><br>
     Nascer do Sol: <span data-weather="sunrise">00:00</span> - Pôr do Sol: <span data-weather="sunset">00:00</span><br>
