--- a/backend/view/index.html
+++ b/backend/view/index.html
@@ -35,7 +35,7 @@
                                 <a class="nav-link" href="#sobre">SOBRE</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://ruralnbr.herokuapp.com/#sobre">TEMPO</a>
+                                <p id="cidade"></p>
                             </li>
                         </ul>
                     </div>
@@ -212,5 +212,5 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="/js/bootstrap.js"></script>
-<script src="/backend/public/js/tempo.js"></script>
+<script src="/js/tempo.js"></script>
 </html>
